Load kernel offset from U-Boot environment

--- a/demo/fwup.conf
+++ b/demo/fwup.conf
@@ -61,8 +61,8 @@ task complete {
     on-init {
         uboot_clearenv(uboot-env)
         uboot_setenv(uboot-env, "a.nerves_fw_uuid", "\${FWUP_META_UUID}")
-        uboot_setenv(uboot-env, "a.offset", "${IMAGE_A_OFFSET}")
-        uboot_setenv(uboot-env, "b.offset", "${IMAGE_B_OFFSET}")
+        uboot_setenv(uboot-env, "a.kernel_lba", "${IMAGE_A_OFFSET}")
+        uboot_setenv(uboot-env, "b.kernel_lba", "${IMAGE_B_OFFSET}")
     }
 
     on-resource Image { raw_write(${IMAGE_A_OFFSET}) }
