Support A/B updates and auto failback

--- a/demo/fwup.conf
+++ b/demo/fwup.conf
@@ -60,6 +60,9 @@ uboot-environment uboot-env {
 task complete {
     on-init {
         uboot_clearenv(uboot-env)
+        uboot_setenv(uboot-env, "nerves_fw_active", "a")
+        uboot_setenv(uboot-env, "upgrade_available", "0")
+        uboot_setenv(uboot-env, "nerves_fw_validated", "1")
         uboot_setenv(uboot-env, "a.nerves_fw_uuid", "\${FWUP_META_UUID}")
         uboot_setenv(uboot-env, "a.kernel_lba", "${IMAGE_A_OFFSET}")
         uboot_setenv(uboot-env, "b.kernel_lba", "${IMAGE_B_OFFSET}")
