Support passing kernel commandline arguments

--- a/demo/fwup.conf
+++ b/demo/fwup.conf
@@ -66,6 +66,8 @@ task complete {
         uboot_setenv(uboot-env, "a.nerves_fw_uuid", "\${FWUP_META_UUID}")
         uboot_setenv(uboot-env, "a.kernel_lba", "${IMAGE_A_OFFSET}")
         uboot_setenv(uboot-env, "b.kernel_lba", "${IMAGE_B_OFFSET}")
+        uboot_setenv(uboot-env, "a.kernel_args", "booting=a")
+        uboot_setenv(uboot-env, "b.kernel_args", "booting=b")
     }
 
     on-resource Image { raw_write(${IMAGE_A_OFFSET}) }
